# cdt_challenge_ws

./: README.txt  pass.cpp  pass.hpp  position_controller_cdt.hpp
src/anymal_actions_cdt/: CMakeLists.txt  actions.yaml  collections.yaml  package.xml
src/anymal_actions_cdt/actions/cdt/: celebration.yaml
src/anymal_actions_cdt/scripts/: start_freegait.py
src/anymal_ori/: CMakeLists.txt  package.xml
src/anymal_ori/config/: actuated_lidar.yaml  actuated_lidar_husky.yaml
src/anymal_ori/config/rqt/: rqt_ori.perspective
src/anymal_ori/config/rviz/: anymal_ori.rviz
src/anymal_ori/launch/: dynamixel_rsp.launch  elevation_mapping.launch  nav.launch  nav_sim.launch  nav_sim_oil_rig_stairs.launch  nav_sim_ori_staircase.launch  oil_rig.launch  sim.launch  state_estimator_lwf.launch  world_without_robot.launch
src/anymal_ori/urdf/: anymal_ori.urdf.xacro
src/anymal_sim_cdt/: CMakeLists.txt  package.xml
src/anymal_sim_cdt/config/rviz/: config.rviz
src/anymal_sim_cdt/launch/: sim.launch  sim_cdt_challenge.launch  sim_cdt_challenge_old.launch
src/anymal_sim_cdt/urdf/: anymal_drs.urdf.xacro
src/gazebo_worlds_cdt/: CMakeLists.txt  README.md  package.xml
src/gazebo_worlds_cdt/models/april_box_16h5/: model.config  model.sdf
src/gazebo_worlds_cdt/models/april_box_16h5/meshes/: april_box_16h5.dae
src/gazebo_worlds_cdt/models/funnel_left/: model.config  model.sdf
src/gazebo_worlds_cdt/models/funnel_right/: model.config  model.sdf
src/gazebo_worlds_cdt/models/grass_box/: model.config  model.sdf
src/gazebo_worlds_cdt/models/grass_box/meshes/: grass_box.dae
src/gazebo_worlds_cdt/models/obstacle_course/: model.config  model.sdf
src/gazebo_worlds_cdt/models/pallet_benchmark/: model.config  model.sdf
src/gazebo_worlds_cdt/models/step_pallets_1/: model.config  model.sdf
src/gazebo_worlds_cdt/models/step_pallets_2/: model.sdf
src/gazebo_worlds_cdt/models/wall_straight/: model.sdf
src/gazebo_worlds_cdt/models/wall_straight2/: model.sdf
src/gazebo_worlds_cdt/models/wall_straight3/: model.sdf
src/gazebo_worlds_cdt/models/wall_straight4/: model.sdf
src/gazebo_worlds_cdt/models/wall_straight5/: model.config  model.sdf
src/gazebo_worlds_cdt/models/wall_straight6/: model.sdf
src/gazebo_worlds_cdt/worlds/: cdt_challenge_old.world
src/gazebo_worlds_ori/: CMakeLists.txt  package.xml
src/gazebo_worlds_ori/models/: oil_rig_README.txt
src/gazebo_worlds_ori/models/april_box_16h5/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/gazebo_worlds_ori/models/april_box_16h5/meshes/: april_box_16h5.dae
src/gazebo_worlds_ori/models/april_box_36h11/: model-1_3.sdf  model-1_4.sdf  model.config  model.sdf
src/gazebo_worlds_ori/models/april_box_36h11/meshes/: april_box_36h11.dae
src/gazebo_worlds_ori/models/funnel_left/: model.config  model.sdf
src/gazebo_worlds_ori/models/funnel_right/: model.config  model.sdf
src/gazebo_worlds_ori/models/grass_box/: model.config  model.sdf
src/gazebo_worlds_ori/models/rough/: model.sdf  random_rough_surface.dae
src/gazebo_worlds_ori/models/step_pallets_1/: model.sdf
src/gazebo_worlds_ori/models/wall_straight/: model.config  model.sdf
src/gazebo_worlds_ori/rviz/: ori_challenge.yaml  rough.yaml  slope.yaml
src/gazebo_worlds_ori/worlds/: atrium.world  oil.world  oil_rig.world  oil_rig_stairs.world  ori_challenge.world  ori_staircase.world  rough.world  slope.world
src/grid_map_cdt/: CMakeLists.txt  package.xml
src/grid_map_cdt/launch/: challenge.launch
src/grid_map_cdt/src/: Challenge.cpp
src/grid_map_demos/: CMakeLists.txt  package.xml
src/grid_map_demos/config/: filters_demo_filter_chain.yaml
src/grid_map_demos/data/: cdt_gridmap_10cm_grid.bag
src/grid_map_demos/launch/: cdt_demo.launch  grid_map_loader_demo.launch  navigation_demo.launch  navigation_demo_static_from_log.launch
src/grid_map_demos/rviz/: filters_demo.rviz  filters_demo_cdt.rviz  grid_map_demo.rviz  navigation_demo_cdt.rviz
src/grid_map_demos/scripts/: fake_pose.py
src/grid_map_demos/src/: IteratorsDemo.cpp  cdt_demo.cpp  filters_demo_node.cpp  move_demo_node.cpp  opencv_demo_node.cpp  resolution_change_demo_node.cpp  simple_demo_node.cpp  tutorial_demo_node.cpp
src/lidar_navigation_cdt/: CMakeLists.txt  package.xml
src/lidar_navigation_cdt/data/: cdt_gridmap_2cm_grid.bag
src/lidar_navigation_cdt/include/grid_map_cdt/: Challenge.hpp
src/lidar_navigation_cdt/launch/: challenge.launch  challenge_static_from_log.launch  challenge_viz.launch
src/lidar_navigation_cdt/src/: Challenge.cpp  Challenge_old.cpp
src/path_follower_cdt/: CMakeLists.txt  package.xml  setup.py
src/path_follower_cdt/include/path_follower_cdt/: path_follower_cdt.hpp
src/path_follower_cdt/launch/: path_follower_cdt.launch
src/path_follower_cdt/scripts/: anymal_high_level_demo_posture.py  anymal_high_level_demo_static_walking.py  anymal_high_level_demo_walking.py  posture_interface.py  start_walking.py  stop_walking.py
src/path_follower_cdt/src/high_level_actions/: __init__.py  high_level_actions.py
src/path_follower_cdt/src/path_follower_cdt/: path_follower_cdt.cpp  path_follower_cdt_node.cpp  simple_heading_follower_node.cpp
src/position_controller_cdt/: CMakeLists.txt  package.xml
src/position_controller_cdt/include/position_controller_cdt/: pass.hpp  position_controller_cdt.hpp
src/position_controller_cdt/launch/: position_controller_cdt.launch
src/position_controller_cdt/scripts/: posture_interface.py
src/position_controller_cdt/src/: position_controller_cdt_node.cpp
src/position_controller_cdt/src/position_controller_cdt/: pass.cpp  position_controller_cdt.cpp  position_controller_cdt_node.cpp
src/position_follower_cdt/: CMakeLists.txt
src/position_follower_cdt/launch/: path_follower_cdt.launch
