<?xml version="1.0"?>
<package format="2">
  <name>path_follower_cdt</name>
  <version>0.0.0</version>
  <description>The path_follower package</description>

  <maintainer email="mfallon@todo.todo">mfallon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>eigen_conversions</depend>
  <depend>roscpp</depend>
  <depend>joy_manager_msgs</depend>

  <export>
  </export>
</package>
